Bug 153041 - [patch] Regression: Many image formats no longer supported
Summary: [patch] Regression: Many image formats no longer supported
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (show other bugs)
Version: 4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-28 10:01 UTC by Allan Sandfeld
Modified: 2009-04-19 18:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Early patch (8.97 KB, patch)
2007-11-28 10:09 UTC, Allan Sandfeld
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allan Sandfeld 2007-11-28 10:01:57 UTC
Version:            (using KDE KDE 3.96.0)
Installed from:    Compiled From Sources

KHTML in KDE 4 no longer supports QImageIO plugins for images. This means all imageformats besides GIF, PNG and JPEG are left unsupported. 

This is a regression from KDE 3. Seriousness is unknown since few websites use these formats, but they could be used by KDE applications.
Comment 1 Allan Sandfeld 2007-11-28 10:09:00 UTC
Created attachment 22228 [details]
Early patch

This early patch fixes many simple cases. It still has several issues: 
1. It doesn't append the supported mimetypes 
2. It doesn't support some QImage formats right
3. notifyQImage() should also replace notifyAppendFrame() in this case
4. Animated formats is still unsupported
Comment 2 Dario Andres 2008-12-21 00:12:06 UTC
Any news on this? Do you know if this is already implemented in current 4.2 trunk ?
Comment 3 Allan Sandfeld 2009-04-19 18:38:32 UTC
SVN commit 956243 by carewolf:

Add support for a number of QImageIO file-types. This support was lost 
from 3.5 to 4.2

This new implementation uses a positive list to avoid any 
potentially unsafe plugins. The positive list currently contains: BMP, 
TIFF, PNM, JPEG-2000 and EXR
BUG: 153041


 M  +3 -2      CMakeLists.txt  
 A             imload/decoders/qimageioloader.cpp   [License: BSD X11 (BSD like)]
 A             imload/decoders/qimageioloader.h   [License: UNKNOWN]
 M  +20 -0     imload/image.cpp  
 M  +6 -0      imload/image.h  
 M  +5 -0      imload/imageloader.h  
 M  +5 -3      imload/imagemanager.cpp  
 M  +11 -9     imload/loaderdatabase.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956243