Add support for a number of QImageIO file-types. This support was lost from 3.5 to 4.2

This new implementation uses a positive list to avoid any 
potentially unsafe plugins. The positive list currently contains: BMP, 
TIFF, PNM, JPEG-2000 and EXR
BUG: 153041

svn path=/trunk/KDE/kdelibs/; revision=956243